# renewable-energy-visualizer

./: .env  README.md  docker-compose.yml
.github/workflows/: lint.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/config/: config.py
backend/app/core/: data_generator.py  database.py  init_db.py  logger.py  security.py
backend/app/models/: energy_consumption.py  energy_generation.py  user.py
backend/app/routes/: auth.py  energy.py
backend/app/schemas/: auth.py  energy.py  user.py
backend/data/: energy_consumption.csv  energy_generation.csv
backend/tests/: conftest.py  test_auth.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/charts/EnergyChart/: EnergyChart.tsx  Filters.tsx
frontend/src/components/charts/PieChart/: PieChart.tsx
frontend/src/components/charts/SectorBarChart/: SectorBarChart.tsx
frontend/src/components/charts/SourceBarChart/: SourceBarChart.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/layout/: AppHeader.tsx  AppSidebar.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  NotFound.tsx
frontend/src/routes/: router.tsx
