[project]
name = "backend"
version = "0.1.0"
description = "Backend for Renewable Energy Visualizer"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv"
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["__pycache__", ".venv"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["tests/*"]
